Fix Carbon Dark Mode Bug

--- a/src/styles/_carbon.scss
+++ b/src/styles/_carbon.scss
@@ -9,9 +9,13 @@
   bottom: 32px;
   right: 32px;
   max-width: 330px;
-  background-color: hsl(0, 0%, 98%);
+  background-color: var(--background);
   box-shadow: 0 1px 4px 1px hsla(0, 0%, 0%, .1);
   z-index: 100;
+}
+
+body.dark-mode #carbonads {
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
 }
 
 #carbonads a {
